--- a/App9test1/App9test1.iOS/Info.plist
+++ b/App9test1/App9test1.iOS/Info.plist
@@ -26,7 +26,7 @@
 	<key>CFBundleDisplayName</key>
 	<string>Poocky</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.agusibrahim.xamtest</string>
+	<string>com.agusibrahim</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>CFBundleIconFiles</key>
